--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,4 @@
-beautifulsoup4==4.8.1
-certifi==2019.9.11
-chardet==3.0.4
-cmake==3.15.3
-comtypes==1.1.7
-Cython==0.29.14
-dlib==19.8.1
-idna==2.8
-numpy==1.17.3
-Pillow==6.2.1
-pypiwin32==223
-PyQt5==5.13.2
-PyQt5-sip==12.7.0
-pywin32==225
-requests==2.22.0
-soupsieve==1.9.5
-urllib3==1.25.6
-xlwings==0.16.0
+asgiref==3.2.3
+Django==3.0
+pytz==2019.3
+sqlparse==0.3.0
